--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -21,6 +21,11 @@
     margin-top: 10px;
 }
 
+.todo-item {
+    display: flex;
+    justify-content: space-between;
+}
+
 .logo {
     height: 6em;
     padding: 1.5em;
