--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -24,7 +24,10 @@
 .todo-item {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
+
+
 
 .logo {
     height: 6em;
